[package]
name = "is-glob"
version = "0.1.0"
edition = "2021"
description = "Returns `true` if the given string looks like a glob pattern."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"
lazy_static = "1.4.0"
